--- a/checkout.html
+++ b/checkout.html
@@ -3,17 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout Wireframe - MasterPlan</title>
+    <title>Complete Your Upgrade - MasterPlan</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Kalam:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Kalam', cursive; background-color: #f9fafb; }
-        .wireframe-box { border: 2px dashed #9ca3af; padding: 1rem; }
-        .annotation { font-family: 'Caveat', cursive; color: #4f46e5; position: absolute; font-size: 1.1rem; }
-        .button-primary { border: 3px solid #1f2937; background-color: #d1d5db; padding: 0.75rem 1.5rem; font-weight: 700; text-align: center; }
-        .input-field { border: 2px solid #6b7280; width: 100%; padding: 0.5rem; }
-        h1 { font-size: 2.5rem; font-weight: 700; }
-        h2 { font-size: 1.5rem; font-weight: 700; }
+        * {
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+        }
+        body {
+            background: linear-gradient(to bottom, #fafbfc 0%, #ffffff 100%);
+        }
+        .gradient-text {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+        .gradient-bg {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        }
+        input[type="text"],
+        input[type="number"] {
+            border: 2px solid #e5e7eb;
+            width: 100%;
+            padding: 0.75rem 1rem;
+            border-radius: 0.5rem;
+            font-size: 1rem;
+            transition: all 0.2s;
+        }
+        input[type="text"]:focus,
+        input[type="number"]:focus {
+            outline: none;
+            border-color: #667eea;
+            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+        }
     </style>
     <!-- Hotjar Tracking Code for https://masterplan-92uay74xk-sebbs21s-projects.vercel.app/ -->
     <script type="module">
@@ -23,67 +48,84 @@
         Hotjar.init(siteId, hotjarVersion);
     </script>
 </head>
-<body class="p-8">
-    <div class="max-w-4xl mx-auto space-y-8">
-        <!-- Persistent Nav -->
-        <header class="wireframe-box flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold">MasterPlan Logo</a>
-            <div class="flex items-center space-x-2">
-                <div>User Icon</div>
-                <div class="font-bold">Sofia (Now logged in)</div>
+<body class="antialiased">
+    <!-- Navigation -->
+    <nav class="bg-white/80 backdrop-blur-md border-b border-gray-100 sticky top-0 z-50">
+        <div class="max-w-7xl mx-auto px-6 py-4">
+            <div class="flex justify-between items-center">
+                <a href="index.html" class="text-2xl font-bold gradient-text">MasterPlan</a>
+                <div class="flex items-center space-x-3">
+                    <div class="w-10 h-10 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-semibold">
+                        S
+                    </div>
+                    <span class="font-semibold text-gray-900">Sofia</span>
+                </div>
             </div>
-        </header>
+        </div>
+    </nav>
 
-        <h1 class="text-center">Complete Your Upgrade</h1>
+    <!-- Main Content -->
+    <main class="max-w-5xl mx-auto px-6 py-12">
+        <h1 class="text-4xl md:text-5xl font-bold text-center text-gray-900 mb-12">Complete Your Upgrade</h1>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
             <!-- Payment Form -->
-            <div class="wireframe-box bg-white p-6 space-y-4">
-                <div class="annotation top-4 right-4">Can be a Stripe/Paddle element</div>
-                <h2>Payment Details</h2>
-                <div class="space-y-4">
+            <div class="bg-white rounded-2xl border border-gray-200 p-8 shadow-sm">
+                <h2 class="text-2xl font-bold text-gray-900 mb-6">Payment Details</h2>
+                <div class="space-y-5">
                     <div>
-                        <label class="font-bold">Card Number</label>
-                        <div class="input-field h-10"></div>
+                        <label class="block text-sm font-semibold text-gray-700 mb-2">Card Number</label>
+                        <input type="text" placeholder="1234 5678 9012 3456" class="w-full" />
                     </div>
-                    <div class="flex space-x-4">
-                        <div class="w-1/2">
-                            <label class="font-bold">Expiry (MM/YY)</label>
-                            <div class="input-field h-10"></div>
+                    <div class="grid grid-cols-2 gap-4">
+                        <div>
+                            <label class="block text-sm font-semibold text-gray-700 mb-2">Expiry (MM/YY)</label>
+                            <input type="text" placeholder="12/25" class="w-full" />
                         </div>
-                        <div class="w-1/2">
-                            <label class="font-bold">CVC</label>
-                            <div class="input-field h-10"></div>
+                        <div>
+                            <label class="block text-sm font-semibold text-gray-700 mb-2">CVC</label>
+                            <input type="text" placeholder="123" class="w-full" />
                         </div>
                     </div>
                     <div>
-                        <label class="font-bold">Name on Card</label>
-                        <div class="input-field h-10"></div>
+                        <label class="block text-sm font-semibold text-gray-700 mb-2">Name on Card</label>
+                        <input type="text" placeholder="John Doe" class="w-full" />
+                    </div>
+                    <div class="pt-4 border-t border-gray-200">
+                        <p class="text-xs text-gray-500">
+                            🔒 Your payment is secured with industry-standard encryption
+                        </p>
                     </div>
                 </div>
             </div>
             
             <!-- Order Summary -->
-            <div class="wireframe-box bg-gray-100 p-6 space-y-4">
-                <h2>Order Summary</h2>
-                <div class="flex justify-between text-lg">
-                    <p>MasterPlan Pro (2-Year Plan)</p>
-                    <p class="font-bold">$60.00</p>
+            <div class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border border-indigo-100 p-8 shadow-sm">
+                <h2 class="text-2xl font-bold text-gray-900 mb-6">Order Summary</h2>
+                <div class="space-y-4 mb-6">
+                    <div class="flex justify-between items-center text-lg">
+                        <span class="text-gray-700">MasterPlan Pro (2-Year Plan)</span>
+                        <span class="font-bold text-gray-900">$60.00</span>
+                    </div>
+                    <div class="flex justify-between items-center text-gray-600">
+                        <span>Tax (Estimated)</span>
+                        <span>$0.00</span>
+                    </div>
                 </div>
-                <div class="flex justify-between text-gray-600">
-                    <p>Tax (Estimated)</p>
-                    <p>$_.__</p>
+                <div class="border-t-2 border-indigo-200 pt-4 mb-6">
+                    <div class="flex justify-between items-center">
+                        <span class="text-xl font-semibold text-gray-900">Total</span>
+                        <span class="text-3xl font-bold gradient-text">$60.00</span>
+                    </div>
                 </div>
-                <hr class="border-gray-400 border-dashed my-4">
-                <div class="flex justify-between text-2xl font-bold">
-                    <p>Total</p>
-                    <p>$XX.XX</p>
-                </div>
-                <a href="success.html" class="button-primary bg-blue-500 border-blue-800 text-white text-center mt-6 block w-full text-xl">
+                <a href="success.html" class="gradient-bg text-white text-center py-4 rounded-xl font-bold text-lg hover:shadow-2xl transition-all transform hover:-translate-y-1 block w-full">
                     Pay & Activate Pro
                 </a>
+                <p class="text-xs text-center text-gray-500 mt-4">
+                    One-time payment • 2 years of access • Cancel anytime
+                </p>
             </div>
         </div>
-    </div>
+    </main>
 </body>
 </html>
