--- a/dashboard.html
+++ b/dashboard.html
@@ -3,19 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Wireframe - MasterPlan</title>
+    <title>Dashboard - MasterPlan</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Kalam:wght@300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Kalam', cursive; background-color: #f9fafb; }
-        .wireframe-box { border: 2px dashed #9ca3af; padding: 1rem; }
-        .annotation { font-family: 'Caveat', cursive; color: #4f46e5; position: absolute; font-size: 1.1rem; }
-        .button-primary { border: 3px solid #1f2937; background-color: #d1d5db; padding: 0.75rem 1.5rem; font-weight: 700; text-align: center; }
-        .button-secondary { border: 2px solid #6b7280; padding: 0.5rem 1rem; font-weight: 700; text-align: center; }
-        h1 { font-size: 2.5rem; font-weight: 700; }
-        h2 { font-size: 1.5rem; font-weight: 700; }
+        * {
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+        }
+        body {
+            background: linear-gradient(to bottom, #fafbfc 0%, #ffffff 100%);
+        }
+        .gradient-text {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+        .gradient-bg {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        }
+        .card-hover {
+            transition: all 0.3s ease;
+        }
+        .card-hover:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+        }
+        .avatar-gradient {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        }
     </style>
     <!-- Hotjar Tracking Code for https://masterplan-92uay74xk-sebbs21s-projects.vercel.app/ -->
     <script type="module">
@@ -25,70 +43,110 @@
         Hotjar.init(siteId, hotjarVersion);
     </script>
 </head>
-<body class="p-8">
-    <div class="max-w-6xl mx-auto space-y-8">
-        <!-- Persistent Nav -->
-        <header class="wireframe-box flex justify-between items-center relative">
-            <a href="index.html" class="text-2xl font-bold">MasterPlan Logo</a>
-            <nav class="flex items-center space-x-6 text-lg">
-                <a href="dashboard.html" class="font-bold">Dashboard</a>
-                <a href="simulator.html">Simulator</a>
-                <a href="pricing.html">Pricing</a>
-            </nav>
-            <div class="flex items-center space-x-2">
-                <div>User Icon</div>
-                <div class="font-bold">Sofia</div>
-            </div>
-            <div class="annotation -top-8 left-4">Full Nav for logged-in users</div>
-        </header>
-
-        <!-- Main Content -->
-        <main class="space-y-8">
+<body class="antialiased">
+    <!-- Navigation -->
+    <nav class="bg-white/80 backdrop-blur-md border-b border-gray-100 sticky top-0 z-50">
+        <div class="max-w-7xl mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
-                <h1>Welcome back, Sofia!</h1>
-                <a href="simulator.html" class="button-primary text-lg">+ Create New Plan</a>
-            </div>
-
-            <!-- Empty State -->
-            <section class="wireframe-box text-center py-20 relative">
-                <div class="annotation top-4 left-4">Shows for first-time users</div>
-                <h2 class="text-2xl">You don't have any saved plans yet.</h2>
-                <p class="text-lg mt-2">Let's create your first one!</p>
-            </section>
-            
-            <!-- Populated State -->
-            <section class="relative">
-                 <div class="annotation top-0 left-4">Shows when user has saved plans</div>
-                <h2 class="text-2xl mb-4">Your Saved Plans</h2>
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                    <!-- Plan Card -->
-                    <div class="wireframe-box space-y-4 bg-white relative">
-                         <div class="annotation -top-8 right-0 transform rotate-6">Key info at a glance</div>
-                        <h3 class="text-xl font-bold">MBA Spain (IE vs. ESADE)</h3>
-                        <div>
-                            <p class="text-sm text-gray-600">Funding Gap:</p>
-                            <p class="text-4xl font-bold text-red-600">$18,000</p>
+                <a href="index.html" class="text-2xl font-bold gradient-text">MasterPlan</a>
+                <div class="hidden md:flex items-center space-x-8">
+                    <a href="dashboard.html" class="text-gray-900 font-semibold border-b-2 border-indigo-600 pb-1">Dashboard</a>
+                    <a href="simulator.html" class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Simulator</a>
+                    <a href="pricing.html" class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Pricing</a>
+                    <div class="flex items-center space-x-3">
+                        <div class="w-10 h-10 avatar-gradient rounded-full flex items-center justify-center text-white font-semibold">
+                            S
                         </div>
-                        <div class="flex justify-between items-center pt-2">
-                            <a href="results.html" class="button-secondary">View Details</a>
-                            <div class="text-sm">Icon (Share)</div>
-                        </div>
-                    </div>
-                    <!-- Another Plan Card -->
-                    <div class="wireframe-box space-y-4 bg-white">
-                        <h3 class="text-xl font-bold">Masters UK (LBS)</h3>
-                        <div>
-                            <p class="text-sm text-gray-600">Funding Gap:</p>
-                            <p class="text-4xl font-bold text-red-600">$35,000</p>
-                        </div>
-                        <div class="flex justify-between items-center pt-2">
-                            <a href="#" class="button-secondary">View Details</a>
-                            <div class="text-sm">Icon (Share)</div>
-                        </div>
+                        <span class="font-semibold text-gray-900">Sofia</span>
                     </div>
                 </div>
-            </section>
-        </main>
-    </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
+    <main class="max-w-7xl mx-auto px-6 py-12">
+        <div class="flex flex-col md:flex-row justify-between items-start md:items-center mb-8">
+            <div>
+                <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-2">Welcome back, Sofia!</h1>
+                <p class="text-gray-600 text-lg">Manage and track all your financial plans in one place</p>
+            </div>
+            <a href="simulator.html" class="gradient-bg text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all transform hover:-translate-y-1 mt-4 md:mt-0">
+                + Create New Plan
+            </a>
+        </div>
+
+        <!-- Empty State -->
+        <div id="empty-state" class="bg-white rounded-2xl border border-gray-200 p-16 text-center shadow-sm">
+            <div class="max-w-md mx-auto">
+                <div class="w-24 h-24 gradient-bg rounded-full mx-auto mb-6 flex items-center justify-center">
+                    <svg class="w-12 h-12 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
+                    </svg>
+                </div>
+                <h2 class="text-2xl font-bold text-gray-900 mb-3">You don't have any saved plans yet</h2>
+                <p class="text-gray-600 mb-8">Create your first financial plan and start planning your Master's degree abroad</p>
+                <a href="simulator.html" class="gradient-bg text-white px-8 py-3 rounded-xl font-semibold inline-block hover:shadow-lg transition-all">
+                    Create Your First Plan
+                </a>
+            </div>
+        </div>
+        
+        <!-- Populated State -->
+        <div id="populated-state" class="hidden">
+            <h2 class="text-2xl font-bold text-gray-900 mb-6">Your Saved Plans</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <!-- Plan Card 1 -->
+                <div class="card-hover bg-white rounded-2xl border border-gray-200 p-6 shadow-sm">
+                    <div class="flex justify-between items-start mb-4">
+                        <div>
+                            <h3 class="text-xl font-bold text-gray-900 mb-1">MBA Spain</h3>
+                            <p class="text-sm text-gray-500">IE vs. ESADE</p>
+                        </div>
+                        <button class="text-gray-400 hover:text-gray-600 transition-colors">
+                            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"></path>
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="mb-6">
+                        <p class="text-sm text-gray-600 mb-2">Funding Gap</p>
+                        <p class="text-4xl font-bold text-red-600">$18,000</p>
+                    </div>
+                    <div class="flex justify-between items-center pt-4 border-t border-gray-100">
+                        <a href="results.html" class="text-indigo-600 font-semibold hover:text-indigo-700 transition-colors">
+                            View Details →
+                        </a>
+                        <span class="text-xs text-gray-500">Updated 2 days ago</span>
+                    </div>
+                </div>
+
+                <!-- Plan Card 2 -->
+                <div class="card-hover bg-white rounded-2xl border border-gray-200 p-6 shadow-sm">
+                    <div class="flex justify-between items-start mb-4">
+                        <div>
+                            <h3 class="text-xl font-bold text-gray-900 mb-1">Masters UK</h3>
+                            <p class="text-sm text-gray-500">London Business School</p>
+                        </div>
+                        <button class="text-gray-400 hover:text-gray-600 transition-colors">
+                            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"></path>
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="mb-6">
+                        <p class="text-sm text-gray-600 mb-2">Funding Gap</p>
+                        <p class="text-4xl font-bold text-red-600">$35,000</p>
+                    </div>
+                    <div class="flex justify-between items-center pt-4 border-t border-gray-100">
+                        <a href="results.html" class="text-indigo-600 font-semibold hover:text-indigo-700 transition-colors">
+                            View Details →
+                        </a>
+                        <span class="text-xs text-gray-500">Updated 1 week ago</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
