--- a/pricing.html
+++ b/pricing.html
@@ -3,20 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pricing Wireframe - MasterPlan</title>
+    <title>Pricing - MasterPlan</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Kalam:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Kalam', cursive; background-color: #f9fafb; }
-        .wireframe-box { border: 2px dashed #9ca3af; padding: 1rem; }
-        .annotation { font-family: 'Caveat', cursive; color: #4f46e5; position: absolute; font-size: 1.1rem; }
-        .button-primary { border: 3px solid #1f2937; background-color: #d1d5db; padding: 0.75rem 1.5rem; font-weight: 700; text-align: center; }
-        h1 { font-size: 2.5rem; font-weight: 700; }
-        h2 { font-size: 1.5rem; font-weight: 700; }
-        .plan-card { border: 3px solid #6b7280; padding: 2rem; background-color: #f3f4f6; }
-        .plan-card.pro { border-color: #1d4ed8; background-color: #fff; }
-        .checkmark { color: #16a34a; font-weight: 700; }
-        .x-mark { color: #dc2626; font-weight: 700; }
+        * {
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+        }
+        body {
+            background: linear-gradient(to bottom, #fafbfc 0%, #ffffff 100%);
+        }
+        .gradient-text {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+        .gradient-bg {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        }
+        .card-hover {
+            transition: all 0.3s ease;
+        }
+        .card-hover:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+        }
     </style>
     <!-- Hotjar Tracking Code for https://masterplan-92uay74xk-sebbs21s-projects.vercel.app/ -->
     <script type="module">
@@ -26,68 +40,171 @@
         Hotjar.init(siteId, hotjarVersion);
     </script>
 </head>
-<body class="p-8">
-    <div class="max-w-6xl mx-auto space-y-8">
-        <!-- Persistent Nav -->
-        <header class="wireframe-box flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold">MasterPlan Logo</a>
-            <nav class="flex items-center space-x-6 text-lg">
-                <a href="dashboard.html">Dashboard</a>
-                <a href="simulator.html">Simulator</a>
-                <a href="pricing.html" class="font-bold">Pricing</a>
-            </nav>
-            <div class="flex items-center space-x-2">
-                <div>User Icon</div>
-                <div class="font-bold">Guest</div>
-            </div>
-        </header>
-
-        <!-- Main Content -->
-        <main class="space-y-12">
-            <h1 class="text-center text-4xl">Your Complete Financial Roadmap.</h1>
-            <p class="text-center text-xl -mt-8">Choose the plan that matches your journey.</p>
-
-            <!-- Pricing Table -->
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto relative items-stretch">
-                <div class="annotation -top-8 left-4">Clear comparison as requested</div>
-                <!-- Free Plan -->
-                <div class="plan-card flex flex-col h-full w-full">
-                    <div class="flex-grow space-y-4">
-                        <h2 class="text-2xl">Free Plan</h2>
-                        <p class="text-4xl font-bold">$0</p>
-                        <p>Get a clear estimate of your total costs and funding gap.</p>
-                        <ul class="space-y-2 text-lg">
-                            <li class="checkmark">&#10003; Funding Gap Calculation</li>
-                            <li class="checkmark">&#10003; Compare 2 Programs</li>
-                            <li class="checkmark">&#10003; Lifestyle Cost Estimates</li>
-                            <li class="x-mark">&#10007; 24-Month Cash Flow</li>
-                            <li class="x-mark">&#10007; Dynamic Scenario Planning</li>
-                            <li class="x-mark">&#10007; Save & Edit Unlimited Plans</li>
-                        </ul>
+<body class="antialiased">
+    <!-- Navigation -->
+    <nav class="bg-white/80 backdrop-blur-md border-b border-gray-100 sticky top-0 z-50">
+        <div class="max-w-7xl mx-auto px-6 py-4">
+            <div class="flex justify-between items-center">
+                <a href="index.html" class="text-2xl font-bold gradient-text">MasterPlan</a>
+                <div class="hidden md:flex items-center space-x-8">
+                    <a href="dashboard.html" class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Dashboard</a>
+                    <a href="simulator.html" class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Simulator</a>
+                    <a href="pricing.html" class="text-gray-900 font-semibold border-b-2 border-indigo-600 pb-1">Pricing</a>
+                    <div class="flex items-center space-x-3">
+                        <div class="w-10 h-10 bg-gray-200 rounded-full flex items-center justify-center text-gray-600 font-semibold">
+                            G
+                        </div>
+                        <span class="font-medium text-gray-700">Guest</span>
                     </div>
-                    <div class="button-primary bg-gray-400 text-center mt-6">Your Current Plan</div>
-                </div>
-
-                <!-- Pro Plan -->
-                <div class="plan-card pro flex flex-col h-full w-full">
-                    <div class="annotation -top-6 -right-6 transform rotate-12 text-blue-800">New Subscription Model!</div>
-                    <div class="flex-grow space-y-4">
-                        <h2 class="text-2xl text-blue-800">MasterPlan Pro</h2>
-                        <p class="text-4xl font-bold">$60</p>
-                        <p>A one-time payment for 2 years of full access. Your entire journey, covered.</p>
-                        <ul class="space-y-2 text-lg">
-                            <li class="checkmark">&#10003; Funding Gap Calculation</li>
-                            <li class="checkmark">&#10003; Compare Unlimited Programs</li>
-                            <li class="checkmark">&#10003; Lifestyle Cost Estimates</li>
-                            <li class="checkmark">&#10003; <strong>24-Month Cash Flow</strong></li>
-                            <li class="checkmark">&#10003; <strong>Dynamic Scenario Planning</strong></li>
-                            <li class="checkmark">&#10003; <strong>Save & Edit Unlimited Plans</strong></li>
-                        </ul>
-                    </div>
-                    <a href="signupmodal.html" class="button-primary bg-blue-500 border-blue-800 text-white text-center mt-6 block">Choose Pro Plan</a>
                 </div>
             </div>
-        </main>
-    </div>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
+    <main class="max-w-7xl mx-auto px-6 py-16">
+        <div class="text-center mb-16">
+            <h1 class="text-4xl md:text-6xl font-bold text-gray-900 mb-4">
+                Your Complete Financial Roadmap
+            </h1>
+            <p class="text-xl md:text-2xl text-gray-600 max-w-2xl mx-auto">
+                Choose the plan that matches your journey. Start free, upgrade when you're ready.
+            </p>
+        </div>
+
+        <!-- Pricing Table -->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-5xl mx-auto">
+            <!-- Free Plan -->
+            <div class="card-hover bg-white rounded-2xl border-2 border-gray-200 p-8 flex flex-col">
+                <div class="flex-grow">
+                    <div class="mb-6">
+                        <h2 class="text-2xl font-bold text-gray-900 mb-2">Free Plan</h2>
+                        <div class="flex items-baseline">
+                            <span class="text-5xl font-bold text-gray-900">$0</span>
+                        </div>
+                        <p class="text-gray-600 mt-4">Get a clear estimate of your total costs and funding gap.</p>
+                    </div>
+                    <ul class="space-y-4 mb-8">
+                        <li class="flex items-start">
+                            <svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                            <span class="text-gray-700">Funding Gap Calculation</span>
+                        </li>
+                        <li class="flex items-start">
+                            <svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                            <span class="text-gray-700">Compare 2 Programs</span>
+                        </li>
+                        <li class="flex items-start">
+                            <svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                            <span class="text-gray-700">Lifestyle Cost Estimates</span>
+                        </li>
+                        <li class="flex items-start">
+                            <svg class="w-6 h-6 text-gray-300 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                            </svg>
+                            <span class="text-gray-400">24-Month Cash Flow</span>
+                        </li>
+                        <li class="flex items-start">
+                            <svg class="w-6 h-6 text-gray-300 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                            </svg>
+                            <span class="text-gray-400">Dynamic Scenario Planning</span>
+                        </li>
+                        <li class="flex items-start">
+                            <svg class="w-6 h-6 text-gray-300 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                            </svg>
+                            <span class="text-gray-400">Save & Edit Unlimited Plans</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="bg-gray-50 border border-gray-200 rounded-xl py-4 text-center font-semibold text-gray-700">
+                    Your Current Plan
+                </div>
+            </div>
+
+            <!-- Pro Plan -->
+            <div class="card-hover bg-gradient-to-br from-indigo-600 to-purple-600 rounded-2xl border-2 border-indigo-500 p-8 flex flex-col relative overflow-hidden">
+                <div class="absolute top-4 right-4 bg-yellow-400 text-yellow-900 text-xs font-bold px-3 py-1 rounded-full">
+                    POPULAR
+                </div>
+                <div class="flex-grow text-white">
+                    <div class="mb-6">
+                        <h2 class="text-2xl font-bold mb-2">MasterPlan Pro</h2>
+                        <div class="flex items-baseline">
+                            <span class="text-5xl font-bold">$60</span>
+                            <span class="text-lg text-indigo-200 ml-2">one-time</span>
+                        </div>
+                        <p class="text-indigo-100 mt-4">A one-time payment for 2 years of full access. Your entire journey, covered.</p>
+                    </div>
+                    <ul class="space-y-4 mb-8">
+                        <li class="flex items-start">
+                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                            <span>Funding Gap Calculation</span>
+                        </li>
+                        <li class="flex items-start">
+                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                            <span>Compare Unlimited Programs</span>
+                        </li>
+                        <li class="flex items-start">
+                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                            <span>Lifestyle Cost Estimates</span>
+                        </li>
+                        <li class="flex items-start">
+                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                            <span class="font-semibold">24-Month Cash Flow</span>
+                        </li>
+                        <li class="flex items-start">
+                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                            <span class="font-semibold">Dynamic Scenario Planning</span>
+                        </li>
+                        <li class="flex items-start">
+                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                            <span class="font-semibold">Save & Edit Unlimited Plans</span>
+                        </li>
+                    </ul>
+                </div>
+                <a href="signupmodal.html" class="bg-white text-indigo-600 rounded-xl py-4 text-center font-bold text-lg hover:bg-indigo-50 transition-all block">
+                    Choose Pro Plan
+                </a>
+            </div>
+        </div>
+
+        <!-- FAQ Section -->
+        <div class="max-w-3xl mx-auto mt-20">
+            <h2 class="text-3xl font-bold text-center text-gray-900 mb-12">Frequently Asked Questions</h2>
+            <div class="space-y-6">
+                <div class="bg-white rounded-xl border border-gray-200 p-6">
+                    <h3 class="font-bold text-gray-900 mb-2">What's included in the Pro plan?</h3>
+                    <p class="text-gray-600">Pro includes everything in Free, plus 24-month cash flow projections, unlimited program comparisons, dynamic scenario planning, and the ability to save and edit unlimited plans.</p>
+                </div>
+                <div class="bg-white rounded-xl border border-gray-200 p-6">
+                    <h3 class="font-bold text-gray-900 mb-2">Is the $60 payment really one-time?</h3>
+                    <p class="text-gray-600">Yes! The $60 payment gives you full access to all Pro features for 2 years. No recurring charges, no surprises.</p>
+                </div>
+                <div class="bg-white rounded-xl border border-gray-200 p-6">
+                    <h3 class="font-bold text-gray-900 mb-2">Can I upgrade later?</h3>
+                    <p class="text-gray-600">Absolutely! You can start with the Free plan and upgrade to Pro anytime. Your data will be preserved when you upgrade.</p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
