--- a/success.html
+++ b/success.html
@@ -3,23 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Success - MasterPlan</title>
+    <title>Payment Successful - MasterPlan</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Kalam:wght@300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Kalam', cursive; background-color: #f9fafb; }
-        .wireframe-box { border: 2px dashed #9ca3af; padding: 1rem; }
-        .annotation { font-family: 'Caveat', cursive; color: #4f46e5; position: absolute; font-size: 1.1rem; }
-        .button-primary { border: 3px solid #1f2937; background-color: #d1d5db; padding: 0.75rem 1.5rem; font-weight: 700; text-align: center; }
-        h1 { font-size: 2.5rem; font-weight: 700; }
-        h2 { font-size: 1.5rem; font-weight: 700; }
-        .success-icon { color: #16a34a; font-size: 4rem; }
-        .celebration-animation { animation: bounce 1s ease-in-out infinite; }
-        @keyframes bounce {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-10px); }
+        * {
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+        }
+        body {
+            background: linear-gradient(to bottom, #fafbfc 0%, #ffffff 100%);
+        }
+        .gradient-text {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+        .gradient-bg {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        }
+        .success-icon {
+            animation: scaleIn 0.5s ease-out;
+        }
+        @keyframes scaleIn {
+            0% {
+                transform: scale(0);
+                opacity: 0;
+            }
+            100% {
+                transform: scale(1);
+                opacity: 1;
+            }
         }
     </style>
     <!-- Hotjar Tracking Code for https://masterplan-92uay74xk-sebbs21s-projects.vercel.app/ -->
@@ -30,105 +46,120 @@
         Hotjar.init(siteId, hotjarVersion);
     </script>
 </head>
-<body class="p-8">
-    <div class="max-w-4xl mx-auto space-y-8">
-        <!-- Persistent Nav -->
-        <header class="wireframe-box flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold">MasterPlan Logo</a>
-            <nav class="flex items-center space-x-6 text-lg">
-                <a href="dashboard.html">Dashboard</a>
-                <a href="simulator.html">Simulator</a>
-                <a href="pricing.html">Pricing</a>
-            </nav>
-            <div class="flex items-center space-x-2">
-                <div>User Icon</div>
-                <div class="font-bold">Sofia</div>
-            </div>
-        </header>
-
-        <!-- Success Content -->
-        <main class="space-y-8">
-            <!-- Success Icon -->
-            <div class="text-center">
-                <div class="success-icon celebration-animation">✓</div>
-            </div>
-
-            <!-- Success Message -->
-            <div class="text-center space-y-4">
-                <h1 class="text-4xl font-bold text-green-600">Payment Successful!</h1>
-                <p class="text-2xl text-gray-700">Welcome to MasterPlan Pro</p>
-            </div>
-
-            <!-- Confirmation Details -->
-            <div class="wireframe-box bg-white p-6 space-y-4">
-                <h2 class="text-xl font-bold mb-4">Your Subscription Details</h2>
-                <div class="space-y-2">
-                    <div class="flex justify-between items-center">
-                        <span class="text-gray-600">Plan:</span>
-                        <span class="font-bold">MasterPlan Pro (2-Year Plan)</span>
-                    </div>
-                    <div class="flex justify-between items-center">
-                        <span class="text-gray-600">Amount Paid:</span>
-                        <span class="font-bold text-green-600">$60.00</span>
-                    </div>
-                    <div class="flex justify-between items-center">
-                        <span class="text-gray-600">Access Granted Until:</span>
-                        <span class="font-bold">2026 - [Current Year + 2]</span>
+<body class="antialiased">
+    <!-- Navigation -->
+    <nav class="bg-white/80 backdrop-blur-md border-b border-gray-100 sticky top-0 z-50">
+        <div class="max-w-7xl mx-auto px-6 py-4">
+            <div class="flex justify-between items-center">
+                <a href="index.html" class="text-2xl font-bold gradient-text">MasterPlan</a>
+                <div class="hidden md:flex items-center space-x-8">
+                    <a href="dashboard.html" class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Dashboard</a>
+                    <a href="simulator.html" class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Simulator</a>
+                    <a href="pricing.html" class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Pricing</a>
+                    <div class="flex items-center space-x-3">
+                        <div class="w-10 h-10 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-semibold">
+                            S
+                        </div>
+                        <span class="font-semibold text-gray-900">Sofia</span>
                     </div>
                 </div>
             </div>
+        </div>
+    </nav>
 
-            <!-- Motivational Message -->
-            <div class="wireframe-box bg-blue-50 border-blue-300 p-8 text-center space-y-4">
-                <div class="text-3xl">🎓</div>
-                <h2 class="text-2xl font-bold text-blue-800">Let's Make Your Master Plan Happen!</h2>
-                <p class="text-lg text-gray-700">
-                    We're excited to partner with you on this journey. Together, we'll create a comprehensive financial roadmap that turns your dream of studying abroad into an achievable reality.
-                </p>
-                <p class="text-lg text-gray-700">
-                    Get ready to compare programs, calculate funding gaps, and build confidence in your financial future. Your success is our mission.
-                </p>
+    <!-- Success Content -->
+    <main class="max-w-4xl mx-auto px-6 py-16">
+        <!-- Success Icon -->
+        <div class="text-center mb-8">
+            <div class="success-icon w-24 h-24 bg-gradient-to-br from-green-400 to-emerald-500 rounded-full mx-auto flex items-center justify-center mb-6">
+                <svg class="w-12 h-12 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7"></path>
+                </svg>
             </div>
+        </div>
 
-            <!-- What's Next -->
-            <div class="wireframe-box bg-white p-6">
-                <h2 class="text-xl font-bold mb-4">What's Next?</h2>
-                <ul class="space-y-3 text-lg">
-                    <li class="flex items-start">
-                        <span class="text-green-600 font-bold mr-2">✓</span>
-                        <span>Create your first financial plan using our simulator</span>
-                    </li>
-                    <li class="flex items-start">
-                        <span class="text-green-600 font-bold mr-2">✓</span>
-                        <span>Compare multiple programs side-by-side</span>
-                    </li>
-                    <li class="flex items-start">
-                        <span class="text-green-600 font-bold mr-2">✓</span>
-                        <span>Access 24-month cash flow projections</span>
-                    </li>
-                    <li class="flex items-start">
-                        <span class="text-green-600 font-bold mr-2">✓</span>
-                        <span>Save and edit unlimited plans in your dashboard</span>
-                    </li>
-                </ul>
-            </div>
+        <!-- Success Message -->
+        <div class="text-center space-y-4 mb-12">
+            <h1 class="text-4xl md:text-5xl font-bold text-gray-900">Payment Successful!</h1>
+            <p class="text-2xl text-gray-600">Welcome to MasterPlan Pro</p>
+        </div>
 
-            <!-- CTA Buttons -->
-            <div class="flex flex-col sm:flex-row justify-center items-center gap-4 pt-8">
-                <a href="simulator.html" class="button-primary bg-blue-500 border-blue-800 text-white text-xl px-8 py-4 block w-full sm:w-auto">
-                    Start Creating Your Plan
-                </a>
-                <a href="dashboard.html" class="button-primary text-xl px-8 py-4 block w-full sm:w-auto">
-                    Go to Dashboard
-                </a>
+        <!-- Confirmation Details -->
+        <div class="bg-white rounded-2xl border border-gray-200 p-8 mb-8 shadow-sm">
+            <h2 class="text-2xl font-bold text-gray-900 mb-6">Your Subscription Details</h2>
+            <div class="space-y-4">
+                <div class="flex justify-between items-center py-3 border-b border-gray-100">
+                    <span class="text-gray-600">Plan:</span>
+                    <span class="font-bold text-gray-900">MasterPlan Pro (2-Year Plan)</span>
+                </div>
+                <div class="flex justify-between items-center py-3 border-b border-gray-100">
+                    <span class="text-gray-600">Amount Paid:</span>
+                    <span class="font-bold text-green-600 text-xl">$60.00</span>
+                </div>
+                <div class="flex justify-between items-center py-3">
+                    <span class="text-gray-600">Access Granted Until:</span>
+                    <span class="font-bold text-gray-900">December 2027</span>
+                </div>
             </div>
+        </div>
 
-            <!-- Support Message -->
-            <div class="text-center text-gray-600 py-4">
-                <p>Questions? We're here to help. Reach out anytime.</p>
-            </div>
-        </main>
-    </div>
+        <!-- Motivational Message -->
+        <div class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border border-indigo-100 p-10 text-center space-y-4 mb-8">
+            <div class="text-5xl mb-4">🎓</div>
+            <h2 class="text-3xl font-bold text-gray-900">Let's Make Your Master Plan Happen!</h2>
+            <p class="text-lg text-gray-700 leading-relaxed max-w-2xl mx-auto">
+                We're excited to partner with you on this journey. Together, we'll create a comprehensive financial roadmap that turns your dream of studying abroad into an achievable reality.
+            </p>
+            <p class="text-lg text-gray-700 leading-relaxed max-w-2xl mx-auto">
+                Get ready to compare programs, calculate funding gaps, and build confidence in your financial future. Your success is our mission.
+            </p>
+        </div>
+
+        <!-- What's Next -->
+        <div class="bg-white rounded-2xl border border-gray-200 p-8 mb-8 shadow-sm">
+            <h2 class="text-2xl font-bold text-gray-900 mb-6">What's Next?</h2>
+            <ul class="space-y-4">
+                <li class="flex items-start">
+                    <svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                    </svg>
+                    <span class="text-gray-700 text-lg">Create your first financial plan using our simulator</span>
+                </li>
+                <li class="flex items-start">
+                    <svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                    </svg>
+                    <span class="text-gray-700 text-lg">Compare multiple programs side-by-side</span>
+                </li>
+                <li class="flex items-start">
+                    <svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                    </svg>
+                    <span class="text-gray-700 text-lg">Access 24-month cash flow projections</span>
+                </li>
+                <li class="flex items-start">
+                    <svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                    </svg>
+                    <span class="text-gray-700 text-lg">Save and edit unlimited plans in your dashboard</span>
+                </li>
+            </ul>
+        </div>
+
+        <!-- CTA Buttons -->
+        <div class="flex flex-col sm:flex-row justify-center items-center gap-4">
+            <a href="simulator.html" class="gradient-bg text-white px-8 py-4 rounded-xl font-bold text-lg hover:shadow-2xl transition-all transform hover:-translate-y-1 w-full sm:w-auto text-center">
+                Start Creating Your Plan
+            </a>
+            <a href="dashboard.html" class="bg-white border-2 border-gray-200 text-gray-700 px-8 py-4 rounded-xl font-bold text-lg hover:border-gray-300 hover:shadow-lg transition-all w-full sm:w-auto text-center">
+                Go to Dashboard
+            </a>
+        </div>
+
+        <!-- Support Message -->
+        <div class="text-center text-gray-600 py-8 mt-8">
+            <p>Questions? We're here to help. Reach out anytime.</p>
+        </div>
+    </main>
 </body>
 </html>
-
